<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_bottomsheet_ngonngu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_background_bottomsheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:id="@+id/setting_txt_ngonngnu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/setting_txt_ngongnu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/languge"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#18507A"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"/>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/setting_rdbg_ngonngu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:id="@+id/setting_gdb_tiengviet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese"
            android:textSize="20dp"
            android:textColor="#105D98"/>

        <RadioButton
            android:id="@+id/setting_gdb_tienganh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english"
            android:textSize="20dp"
            android:textColor="#105D98" />
    </RadioGroup>




</LinearLayout>