<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/txt_titlewelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="LOGIN"
            android:textColor="#7C45B3"
            android:textSize="55sp"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/signup_img"
            android:layout_width="183dp"
            android:layout_height="252dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/background_sigin"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/login_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="399dp">

        <EditText
            android:id="@+id/login_edittxt_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:drawableLeft="@drawable/ic_user1"
            android:drawablePadding="15dp"
            android:drawableTint="#6c63ff"
            android:ems="10"
            android:hint="@string/login_user"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />


        <EditText
            android:id="@+id/login_edittxt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_light_off"
            android:drawablePadding="15dp"
            android:drawableTint="#6c63ff"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:visibility="visible"
            android:paddingStart="20dp"
            android:paddingRight="16dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/ckb_rememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:shadowColor="@color/black"
                android:text="@string/login_remember_me"
                android:layout_marginLeft="30dp"
                android:textColor="#6c63ff" />

            <TextView
                android:id="@+id/login_txt_forgetpasswod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/login_forget_password"
                android:textColor="#FF6C63FF"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:id="@+id/txt_loidangnhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn_login"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cusom_background_btn_intro"
            android:backgroundTint="@drawable/cusom_background_btn_intro"
            android:fontFamily="monospace"
            android:text="@string/login_login"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="#512DA8" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Donthaveanaccount"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/login_txt_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Create"
                android:textColor="#6042A8"
                android:layout_marginLeft="3dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>