<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/signUp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_titlewelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGNUP"
            android:textColor="#7C45B3"
            android:textSize="55sp"
            android:layout_marginTop="45dp"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/signup_img"
            android:layout_width="174dp"
            android:layout_height="227dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/background_signup"
            tools:ignore="MissingConstraints" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/signUp_title"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/signup_edittxt_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:ems="10"
            android:hint="@string/signup_user"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/signup_edittxt_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:ems="10"
            android:hint="@string/signup_emai"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/signup_edittxt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:ems="10"
            android:hint="@string/signup_password"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/esignup_edittxt_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:ems="10"
            android:hint="@string/signup_confirm_password"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/signup_btn_signout"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cusom_background_btn_intro"
            android:backgroundTint="@drawable/cusom_background_btn_intro"
            android:fontFamily="monospace"
            android:text="@string/signup_signup"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="#512DA8" />

    </LinearLayout>

</RelativeLayout>