<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/forgot_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/forgot_txt_titleforgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#7C45B3"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/forgot_img"
            android:layout_width="183dp"
            android:layout_height="252dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_setnewpass"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/forgot_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="399dp">

        <EditText
            android:id="@+id/forgot_edittxt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:drawableLeft="@drawable/ic_changelock"
            android:drawableRight="@drawable/ic_light_off"
            android:paddingRight="16dp"
            android:drawablePadding="15dp"
            android:drawableTint="#6c63ff"
            android:ems="10"
            android:hint="@string/New_password"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/forgot_edittxt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background_signup"
            android:drawableLeft="@drawable/ic_changelock"
            android:drawablePadding="15dp"
            android:drawableTint="#6c63ff"
            android:ems="10"
            android:hint="@string/Confirmpassword"
            android:inputType="textPassword"
            android:visibility="visible"
            android:paddingStart="20dp"
            android:paddingRight="16dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:id="@+id/forgot_txt_loidangnhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/forgot_btn_resetnewpass"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cusom_background_btn_intro"
            android:backgroundTint="@drawable/cusom_background_btn_intro"
            android:fontFamily="monospace"
            android:text="Reset Password"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="#512DA8" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Backto"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/forgot_txt_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signin"
                android:textColor="#6042A8"
                android:layout_marginLeft="4dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>