<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/listidcard_update"
    android:background="@drawable/custom_background_bottomsheet_form"
    android:padding="16dp"

    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="UPDATE ID CARD"
        android:textColor="#105D98"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/list_edt_addform_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background_form"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/list_edt_addform_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background_form"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/list_edt_addform_idcard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background_form"
        android:ems="10"
        android:hint="@string/id_card"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/update_idcardForm_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/custom_button"
            android:text="Save"
            android:textColor="#105D98"
            app:backgroundTint="#FAF8F8" />

        <Button
            android:id="@+id/update_idcardForm_locked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_button"
            android:text="LOCK"
            android:textColor="#105D98"
            app:backgroundTint="#FAF8F8" />
    </RelativeLayout>
</LinearLayout>